--- a/testservice-main/testservice-web/src/main/webapp/WEB-INF/web.xml
+++ b/testservice-main/testservice-web/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,33 @@
     <servlet-name>TestServlet</servlet-name>
     <url-pattern>/TestServlet</url-pattern>
   </servlet-mapping>
+  
+   <servlet>
+        <servlet-name>spring</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>spring</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    <!--  registers Spring for soap service  -->
+	<listener>
+		<listener-class>
+			org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
+	
+	
+	<servlet>
+		<servlet-name>jaxws-servlet</servlet-name>
+		<servlet-class>
+			com.sun.xml.ws.transport.http.servlet.WSSpringServlet
+		</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>jaxws-servlet</servlet-name>
+		<url-pattern>/elephantRiding</url-pattern>
+	</servlet-mapping>
 </web-app>
