--- a/testservice-main/testservice-web/src/main/webapp/WEB-INF/web.xml
+++ b/testservice-main/testservice-web/src/main/webapp/WEB-INF/web.xml
@@ -39,4 +39,17 @@
 		<servlet-name>jaxws-servlet</servlet-name>
 		<url-pattern>/elephantRiding</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>jaxws-servlet</servlet-name>
+		<url-pattern>/testRequest</url-pattern>
+	</servlet-mapping>
+	
+	
+	 <resource-ref>
+		<description>Connection Pool</description>
+		<res-ref-name>jdbc/TestService</res-ref-name>
+		<res-type>javax.sql.Datasource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+  
 </web-app>
