--- a/WebServiceClientServlet/pom.xml
+++ b/WebServiceClientServlet/pom.xml
@@ -10,9 +10,48 @@
   <name>WebServiceClientServlet</name>
   <url>http://maven.apache.org</url>
 
+
+	<properties>
+		<spring-framework.version>4.3.1.RELEASE</spring-framework.version>
+	</properties>
   <dependencies>
  <!-- Spring -->
 
+<!-- Spring -->
+  
+  	  <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>${spring-framework.version}</version>
+	</dependency>  
+  	<!-- <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>${spring-framework.version}</version>
+	</dependency> -->
+	<!-- <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+		<version>${spring-framework.version}</version>
+	</dependency>
+	<dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${spring-framework.version}</version>
+    </dependency> -->
+    
+	<!-- <dependency>
+	    <groupId>org.springframework.ws</groupId>
+	    <artifactId>spring-ws-core</artifactId>
+	    <version>2.4.0.RELEASE</version>
+	</dependency> -->
+	
+	<!-- <dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-aspects</artifactId>
+	    <version>${spring-framework.version}</version>
+	</dependency> -->
+	
 		 <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
